--- a/mssc-beer-service/src/main/resources/application.properties
+++ b/mssc-beer-service/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=embedded
+sfg.brewery.beer-inventory-service-host=http://localhost:8082
