--- a/mssc-beer-service/src/main/resources/application.properties
+++ b/mssc-beer-service/src/main/resources/application.properties
@@ -4,3 +4,6 @@ sfg.brewery.beer-inventory-service-host=http://localhost:8082
 spring.cache.jcache.config=classpath:ehcache.xml
 spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
 spring.h2.console.enabled=true
+# defaults for this docker image - vromero/activemq-artemis
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
