--- a/mssc-brewery-bom/mssc-brewery-bom/pom.xml
+++ b/mssc-brewery-bom/mssc-brewery-bom/pom.xml
@@ -7,13 +7,13 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.1.5.RELEASE</version>
+    <version>2.2.1.RELEASE</version>
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
 
   <groupId>com.codeinpeace</groupId>
   <artifactId>mssc-brewery-bom</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.2-SNAPSHOT</version>
 
   <packaging>pom</packaging>
 
@@ -81,6 +81,10 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
