--- a/mssc-brewery-bom/mssc-brewery-bom/pom.xml
+++ b/mssc-brewery-bom/mssc-brewery-bom/pom.xml
@@ -13,7 +13,7 @@
 
   <groupId>com.codeinpeace</groupId>
   <artifactId>mssc-brewery-bom</artifactId>
-  <version>1.2-SNAPSHOT</version>
+  <version>1.3-SNAPSHOT</version>
 
   <packaging>pom</packaging>
 
@@ -85,6 +85,12 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
+    <!-- Adding Spring State Machine -->
+    <dependency>
+      <groupId>org.springframework.statemachine</groupId>
+      <artifactId>spring-statemachine-core</artifactId>
+      <version>2.1.3.RELEASE</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
