--- a/mssc-brewery-eureka/src/main/resources/application.properties
+++ b/mssc-brewery-eureka/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8761
 
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+
+spring.security.user.name=eureka
+spring.security.user.password=password
+
+logging.level.com.netflix.eureka=OFF
+logging.level.com.netflix.discovery=OFF
