Assignment - Configure Spring Cloud Sleuth

--- a/mssc-brewery-eureka/src/main/resources/application.properties
+++ b/mssc-brewery-eureka/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.security.user.password=password
 
 logging.level.com.netflix.eureka=OFF
 logging.level.com.netflix.discovery=OFF
+
+spring.zipkin.baseUrl= http://localhost:9411/
