--- a/mssc-beer-inventory-service/src/main/resources/application.properties
+++ b/mssc-beer-inventory-service/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.artemis.password=simetraehcapa
 
 logging.level.com.codeinpeace=debug
 
-spring.zipkin.baseUrl= http://localhost:9411/
+spring.zipkin.enabled=false
