--- a/mssc-beer-service/src/main/resources/application.properties
+++ b/mssc-beer-service/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.h2.console.enabled=true
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 
-spring.zipkin.baseUrl= http://localhost:9411/
+spring.zipkin.enabled=false
 
 logging.level.com.codeinpeace.msscbeerservice.services.brewing=debug
