--- a/mssc-beer-inventory-service/pom.xml
+++ b/mssc-beer-inventory-service/pom.xml
@@ -17,4 +17,10 @@
 
     <description>MSSC Beer Inventory Service</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+    </dependencies>
 </project>
