--- a/mssc-beer-inventory-service/src/main/resources/application.properties
+++ b/mssc-beer-inventory-service/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.artemis.password=simetraehcapa
 logging.level.com.codeinpeace=debug
 
 spring.zipkin.enabled=false
+
+spring.security.user.name=good
+spring.security.user.password=beer
