mssc-beer-service - Configure RESTTemplate for HTTP Basic Authentication

--- a/mssc-beer-service/src/main/resources/application.properties
+++ b/mssc-beer-service/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=beer-service
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=embedded
 sfg.brewery.beer-inventory-service-host=http://localhost:8082
+sfg.brewery.inventory-user=good
+sfg.brewery.inventory-password=beer
 spring.cache.jcache.config=classpath:ehcache.xml
 spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
 spring.h2.console.enabled=true
