--- a/mssc-beer-service/src/main/resources/application.properties
+++ b/mssc-beer-service/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.artemis.password=simetraehcapa
 spring.zipkin.enabled=false
 
 logging.level.com.codeinpeace.msscbeerservice.services.brewing=debug
+
+# Spring Data hangs when set to deferred under Spring Boot 2.3.0
+spring.data.jpa.repositories.bootstrap-mode=default
