Update other servicer for Docker (Assignment - Update BOM Services)

--- a/mssc-beer-service/pom.xml
+++ b/mssc-beer-service/pom.xml
@@ -4,9 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.github.sfg-beer-works</groupId>
-        <artifactId>sfg-brewery-bom</artifactId>
-        <version>1.0.17</version>
+        <groupId>com.codeinpeace</groupId>
+        <artifactId>mssc-brewery-bom</artifactId>
+        <version>1.4.2-SNAPSHOT</version>
     </parent>
 
     <groupId>com.codeinpeace</groupId>
