--- a/mssc-beer-inventory-service/pom.xml
+++ b/mssc-beer-inventory-service/pom.xml
@@ -3,9 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.github.sfg-beer-works</groupId>
-        <artifactId>sfg-brewery-bom</artifactId>
-        <version>1.0.13</version>
+        <groupId>com.codeinpeace</groupId>
+        <artifactId>mssc-brewery-bom</artifactId>
+        <version>1.4.2-SNAPSHOT</version>
     </parent>
 
     <groupId>com.codeinpeace</groupId>
