--- a/mssc-beer-order-service/pom.xml
+++ b/mssc-beer-order-service/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.codeinpeace</groupId>
         <artifactId>mssc-brewery-bom</artifactId>
-        <version>1.4.2-SNAPSHOT</version>
+        <version>1.0.18</version>
     </parent>
 
     <groupId>com.codeinpeace</groupId>
