--- a/mssc-brewery-bom/mssc-brewery-bom/pom.xml
+++ b/mssc-brewery-bom/mssc-brewery-bom/pom.xml
@@ -13,7 +13,7 @@
 
   <groupId>com.codeinpeace</groupId>
   <artifactId>mssc-brewery-bom</artifactId>
-  <version>1.4.2-SNAPSHOT</version>
+  <version>1.0.18</version>
   <packaging>pom</packaging>
 
   <licenses>
@@ -243,8 +243,8 @@
       <artifactId>spring-cloud-starter-zipkin</artifactId>
     </dependency>
     <dependency>
-      <groupId>javax.validation</groupId>
-      <artifactId>validation-api</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
   </dependencies>
 
