Docker Compose for Inventory Service

--- a/mssc-beer-service/src/main/docker/local/compose.yaml
+++ b/mssc-beer-service/src/main/docker/local/compose.yaml
@@ -1,6 +1,6 @@
 version: '3.8'
 services:
-  jsm:
+  jms:
     image: vromero/activemq-artemis
     ports:
       - 8161:8161
@@ -21,3 +21,17 @@ services:
       - eureka
     environment:
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://netflix:eureka@eureka:8761/eureka/
+  inventory-service:
+    image: codeinpeace/mssc-beer-inventory-service
+    ports:
+      - 8082:8082
+    depends_on:
+      - eureka
+      - config
+      - jms
+    environment:
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://netflix:eureka@eureka:8761/eureka/
+      SPRING_PROFILES_ACTIVE: local-discovery,localmysql
+      SPRING_ZIPKIN_BASEURL: http://zipkin
+      SPRING_ARTEMIS_HOST: jms
+      SPRING_DATASOURCE_URL: jdbc:mysql://host.docker.internal:3306/beerinventoryservice?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
