Docker compose fixes

--- a/mssc-beer-service/src/main/docker/local/compose.yaml
+++ b/mssc-beer-service/src/main/docker/local/compose.yaml
@@ -21,9 +21,8 @@ services:
       - eureka
     environment:
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://netflix:eureka@eureka:8761/eureka/
-      EUREKA_INSTANCE_PREFER_IP_ADDRESS: true
-    restart: on-failure
-  inventory-service:
+      EUREKA_INSTANCE_PREFER_IP_ADDRESS: 'true'
+  inventory:
     image: codeinpeace/mssc-beer-inventory-service
     ports:
       - 8082:8082
@@ -32,12 +31,12 @@ services:
       - config
       - jms
     environment:
-      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://netflix:eureka@eureka:8761/eureka/
       SPRING_PROFILES_ACTIVE: local-discovery,localmysql
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://netflix:eureka@eureka:8761/eureka/
       SPRING_ZIPKIN_BASEURL: http://zipkin
-      SPRING_ARTEMIS_HOST: jms
       SPRING_DATASOURCE_URL: jdbc:mysql://host.docker.internal:3306/beerinventoryservice?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
-      EUREKA_INSTANCE_PREFER_IP_ADDRESS: true
+      SPRING_ARTEMIS_HOST: jms
+      EUREKA_INSTANCE_PREFER_IP_ADDRESS: 'true'
     restart: on-failure
   beer-service:
     image: codeinpeace/mssc-beer-service
@@ -46,15 +45,15 @@ services:
     depends_on:
       - eureka
       - config
+      - inventory
       - jms
-      - inventory-service
     environment:
-      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://netflix:eureka@eureka:8761/eureka/
       SPRING_PROFILES_ACTIVE: local-discovery,localmysql
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://netflix:eureka@eureka:8761/eureka/
+      EUREKA_INSTANCE_PREFER_IP_ADDRESS: 'true'
       SPRING_ZIPKIN_BASEURL: http://zipkin
-      SPRING_ARTEMIS_HOST: jms
       SPRING_DATASOURCE_URL: jdbc:mysql://host.docker.internal:3306/beerservice?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
-      EUREKA_INSTANCE_PREFER_IP_ADDRESS: true
+      SPRING_ARTEMIS_HOST: jms
     restart: on-failure
   order-service:
     image: codeinpeace/mssc-beer-order-service
@@ -63,16 +62,16 @@ services:
     depends_on:
       - eureka
       - config
-      - jms
       - beer-service
+      - jms
     environment:
-      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://netflix:eureka@eureka:8761/eureka/
       SPRING_PROFILES_ACTIVE: local-discovery,localmysql
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://netflix:eureka@eureka:8761/eureka/
+      EUREKA_INSTANCE_PREFER_IP_ADDRESS: 'true'
       SPRING_ZIPKIN_BASEURL: http://zipkin
-      SPRING_ARTEMIS_HOST: jms
       SPRING_DATASOURCE_URL: jdbc:mysql://host.docker.internal:3306/beerorderservice?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+      SPRING_ARTEMIS_HOST: jms
       SFG_BREWERY_BEER-SERVICE-HOST: http://beer-service:8080
-      EUREKA_INSTANCE_PREFER_IP_ADDRESS: true
     restart: on-failure
   gateway:
     image: codeinpeace/mssc-brewery-gateway
@@ -81,11 +80,10 @@ services:
     depends_on:
       - eureka
       - config
-      - inventory-service
+      - inventory
       - beer-service
       - order-service
     environment:
-      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://netflix:eureka@eureka:8761/eureka/
       SPRING_PROFILES_ACTIVE: local-discovery
-      EUREKA_INSTANCE_PREFER_IP_ADDRESS: true
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://netflix:eureka@eureka:8761/eureka/
     restart: on-failure
