--- a/mssc-beer-service/src/main/docker/local-logging/compose-logging.yaml
+++ b/mssc-beer-service/src/main/docker/local-logging/compose-logging.yaml
@@ -6,6 +6,13 @@ services:
       - 9200:9200
     environment:
       discovery.type: single-node
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.7.0
+    ports:
+      - 5601:5601
+    restart: on-failure
+    depends_on:
+      - elasticsearch
   jms:
     image: vromero/activemq-artemis
     ports:
