--- a/mssc-beer-service/src/main/docker/local-logging/compose-logging.yaml
+++ b/mssc-beer-service/src/main/docker/local-logging/compose-logging.yaml
@@ -13,6 +13,14 @@ services:
     restart: on-failure
     depends_on:
       - elasticsearch
+  filebeat:
+    image: docker.elastic.co/beats/filebeat:7.7.0
+    volumes:
+      - ./filebeat/filebeat.docker.yml:/usr/share/filebeat/filebeat.yml:ro # Configuration file
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro           # Docker logs
+      - /var/run/docker.sock:/var/run/docker.sock:ro                       # Additional information about containers
+    user: root                                                             # Allow access to log files and docker.sock
+    restart: on-failure
   jms:
     image: vromero/activemq-artemis
     ports:
